--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
 
 form.exemple button{
     height: 20px ;
+    width: 20px;
     padding-top: 10px ;
     border-radius: 10px;
+    background-color: rgb(205, 43, 226);
 }
 
 body{
